<resources>
    <string name="app_name">puftocator Client</string>
    <string name="title_activity_maps">Map</string>

    <string name="find_user_location">Find User location</string>

    <string name="geo_service_description">Puftocator service</string>
    <string name="geo_service_notification_title">Puftocator service</string>
    <string name="geo_service_notification_text">Tracking in progress..</string>

    <string name="main_menu_action_settings">Settings</string>
    <string name="main_menu_action_exit">Exit</string>

    <string name="main_activity_title">Puftocator</string>
    <string name="main_activity_message_no_internet">No internet connection</string>

    <string name="settings_activity_title">Settings</string>
    <string name="settings_preference_category_location_title">Location</string>
    <string name="settings_preference_location_active_title">Active parameters</string>
    <string name="settings_preference_location_passive_title">Passive parameters</string>
    <string name="settings_preference_location_active_request_interval_key">activeRequestInterval</string>
    <string name="settings_preference_location_active_request_interval_title">Active request interval (s)</string>
    <string name="settings_preference_location_active_request_interval_summary">Location refresh rate when in active mode</string>
    <string name="settings_preference_location_active_request_fastest_interval_key">activeRequestFastestInterval</string>
    <string name="settings_preference_location_active_request_fastest_interval_title">Active request fastest interval (s)</string>
    <string name="settings_preference_location_active_request_fastest_interval_summary">Location fastest refresh rate when in active mode</string>
    <string name="settings_preference_location_active_max_wait_time_key">activeMaxWaitTime</string>
    <string name="settings_preference_location_active_max_wait_time_title">Active max wait time (s)</string>
    <string name="settings_preference_location_active_max_wait_time_summary">Longest time to wait for location signal when in active mode</string>
    <string name="settings_preference_location_active_smallest_displacement_key">activeSmallestDisplacement</string>
    <string name="settings_preference_location_active_smallest_displacement_title">Active smallest displacement (m)</string>
    <string name="settings_preference_location_active_smallest_displacement_summary">Smallest displacement to register location change when in active mode</string>
    <string name="settings_preference_location_passive_request_interval_key">passiveRequestInterval</string>
    <string name="settings_preference_location_passive_request_interval_title">Passive request interval (s)</string>
    <string name="settings_preference_location_passive_request_interval_summary">Location refresh rate when in passive mode</string>
    <string name="settings_preference_location_passive_request_fastest_interval_key">passiveRequestFastestInterval</string>
    <string name="settings_preference_location_passive_request_fastest_interval_title">Passive request fastest interval (s)</string>
    <string name="settings_preference_location_passive_request_fastest_interval_summary">Location fastest refresh rate when in passive mode</string>
    <string name="settings_preference_location_passive_max_wait_time_key">passiveMaxWaitTime</string>
    <string name="settings_preference_location_passive_max_wait_time_title">Passive max wait time (s)</string>
    <string name="settings_preference_location_passive_max_wait_time_summary">Longest time to wait for location signal when in passive mode</string>
    <string name="settings_preference_location_passive_smallest_displacement_key">passiveSmallestDisplacement</string>
    <string name="settings_preference_location_passive_smallest_displacement_title">Passive smallest displacement (m)</string>
    <string name="settings_preference_location_passive_smallest_displacement_summary">Smallest displacement to register location change when in passive mode</string>
    <string name="settings_preference_reset_to_default_key">resetToDefault</string>
    <string name="settings_preference_reset_to_default_title">Reset to default</string>
    <string name="settings_preference_reset_to_default_message">Revert all values to their defaults?</string>
    <string name="settings_preference_reset_to_default_summary">Reset all settings to their initial values.</string>
    <string name="settings_preference_reset_to_default_positive_button_text">Yes, RESET all values</string>
    <string name="settings_preference_reset_to_default_negative_button_text">No, KEEP current values</string>

    <string name="settings_preference_category_tracker_title">Tracker</string>
    <string name="settings_preference_radius_key">locationRadius</string>
    <string name="settings_preference_radius_title">Trigger radius</string>
    <string name="settings_preference_draw_radius_key">drawRadius</string>
    <string name="settings_preference_draw_radius_title">Draw radius on map</string>
</resources>
