<PreferenceScreen  xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <SeekBarPreference
        app:key="@string/settings_preference_location_passive_request_interval_key"
        app:title="@string/settings_preference_location_passive_request_interval_title"
        app:showSeekBarValue="true"
        app:min="10"
        android:max="300"
        android:defaultValue="60"
        android:summary="@string/settings_preference_location_passive_request_interval_summary" />

    <SeekBarPreference
        app:key="@string/settings_preference_location_passive_request_fastest_interval_key"
        app:title="@string/settings_preference_location_passive_request_fastest_interval_title"
        app:showSeekBarValue="true"
        app:min="10"
        android:max="300"
        android:defaultValue="30"
        android:summary="@string/settings_preference_location_passive_request_fastest_interval_summary" />

    <SeekBarPreference
        app:key="@string/settings_preference_location_passive_max_wait_time_key"
        app:title="@string/settings_preference_location_passive_max_wait_time_title"
        app:showSeekBarValue="true"
        app:min="60"
        android:max="600"
        android:defaultValue="300"
        android:summary="@string/settings_preference_location_passive_max_wait_time_summary" />

    <SeekBarPreference
        app:key="@string/settings_preference_location_passive_smallest_displacement_key"
        app:title="@string/settings_preference_location_passive_smallest_displacement_title"
        app:showSeekBarValue="true"
        android:max="500"
        android:defaultValue="200"
        android:summary="@string/settings_preference_location_passive_smallest_displacement_summary" />
</PreferenceScreen>
